Add styles for logo display and mobile responsiveness
Added CSS styles for site logo display and responsiveness.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
   <title>Neonox Gas Tech | High-Purity Gas Pipeline Solutions</title>
 
   <style>
+/* LOGO DISPLAY FIX */
+.site-logo {
+  width: 240px;
+  max-width: 95%;
+  height: auto;
+  display: block;
+  margin: 0 auto 22px;
+  padding: 18px;
+  background: #ffffff;
+  border-radius: 20px;
+  box-shadow: 0 25px 45px rgba(0,0,0,0.35);
+}
+
+/* Mobile */
+@media (max-width: 768px) {
+  .site-logo {
+    width: 170px;
+    padding: 14px;
+  }
+}
+</style>
+
     * {
       margin: 0;
       padding: 0;
