--- a/index.html
+++ b/index.html
@@ -1,232 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Neonox Gas Tech | High-Purity Gas Pipeline Solutions</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Neonox Gas Tech | Industrial & High-Purity Gas Pipeline Systems</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
-    }
+<style>
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-    body {
-      background: #f4f7fb;
-      color: #222;
-      line-height: 1.6;
-    }
+body {
+  background: #f2f5f9;
+  color: #222;
+  line-height: 1.6;
+}
 
-    /* HERO */
-    .hero {
-      background: linear-gradient(135deg, #003a8f, #005fcc);
-      padding: 70px 20px 80px;
-      text-align: center;
-      color: #fff;
-    }
+/* HERO */
+.hero {
+  background: linear-gradient(135deg, #0b2e59, #144a8a);
+  text-align: center;
+  padding: 70px 20px 60px;
+  color: #fff;
+}
 
-    .site-logo {
-      width: 240px;
-      max-width: 95%;
-      height: auto;
-      margin-bottom: 22px;
-      padding: 18px;
-      background: #ffffff;
-      border-radius: 20px;
-      box-shadow: 0 25px 45px rgba(0,0,0,0.35);
-    }
+.site-logo {
+  width: 220px;
+  padding: 16px;
+  background: #fff;
+  border-radius: 18px;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.35);
+  margin-bottom: 20px;
+}
 
-    .hero h1 {
-      font-size: 36px;
-      margin-bottom: 10px;
-    }
+.hero h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
 
-    .hero p {
-      font-size: 18px;
-      opacity: 0.95;
-    }
+.hero p {
+  font-size: 18px;
+  opacity: 0.95;
+}
 
-    /* NAV */
-    nav {
-      background: #002e6d;
-      padding: 12px;
-      text-align: center;
-    }
+/* NAV */
+nav {
+  background: #0a2545;
+  padding: 12px;
+  text-align: center;
+}
 
-    nav a {
-      color: #fff;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
+nav a {
+  color: #fff;
+  margin: 0 15px;
+  text-decoration: none;
+  font-weight: bold;
+}
 
-    nav a:hover {
-      text-decoration: underline;
-    }
+/* SECTIONS */
+section {
+  max-width: 1150px;
+  margin: 40px auto;
+  padding: 35px;
+  background: #fff;
+  border-radius: 14px;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+}
 
-    /* SECTIONS */
-    section {
-      max-width: 1100px;
-      margin: 40px auto;
-      background: #fff;
-      padding: 35px;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-    }
+section h2 {
+  color: #0b2e59;
+  margin-bottom: 12px;
+  border-bottom: 3px solid #144a8a;
+  display: inline-block;
+  padding-bottom: 6px;
+}
 
-    section h2 {
-      color: #003a8f;
-      margin-bottom: 15px;
-      border-bottom: 3px solid #005fcc;
-      display: inline-block;
-      padding-bottom: 6px;
-    }
+section p {
+  margin-bottom: 12px;
+}
 
-    section p {
-      margin-bottom: 12px;
-    }
+ul {
+  padding-left: 20px;
+}
 
-    ul {
-      margin-top: 10px;
-      padding-left: 20px;
-    }
+ul li {
+  margin-bottom: 8px;
+}
 
-    ul li {
-      margin-bottom: 8px;
-    }
+/* IMAGE GRID */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
+}
 
-    /* CONTACT FORM */
-    form input,
-    form textarea {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 15px;
-    }
+.grid img {
+  width: 100%;
+  border-radius: 12px;
+  box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+}
 
-    form button {
-      background: #005fcc;
-      color: #fff;
-      border: none;
-      padding: 12px 25px;
-      font-size: 16px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
+/* CONTACT FORM */
+form input, form textarea {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 12px;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
 
-    form button:hover {
-      background: #003a8f;
-    }
+form button {
+  background: #144a8a;
+  color: #fff;
+  border: none;
+  padding: 12px 26px;
+  font-size: 16px;
+  border-radius: 6px;
+  cursor: pointer;
+}
 
-    /* WHATSAPP */
-    .whatsapp {
-      position: fixed;
-      right: 20px;
-      bottom: 20px;
-      background: #25d366;
-      color: #fff;
-      padding: 14px 18px;
-      border-radius: 50px;
-      text-decoration: none;
-      font-weight: bold;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-      z-index: 999;
-    }
+form button:hover {
+  background: #0b2e59;
+}
 
-    .whatsapp:hover {
-      background: #1ebe5d;
-    }
+/* WHATSAPP */
+.whatsapp {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background: #25d366;
+  color: #fff;
+  padding: 14px 18px;
+  border-radius: 50px;
+  text-decoration: none;
+  font-weight: bold;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+  z-index: 999;
+}
 
-    /* FOOTER */
-    footer {
-      text-align: center;
-      padding: 20px;
-      background: #002e6d;
-      color: #fff;
-      margin-top: 40px;
-    }
+/* FOOTER */
+footer {
+  background: #0a2545;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+  margin-top: 50px;
+}
 
-    /* MOBILE */
-    @media (max-width: 768px) {
-      .hero h1 {
-        font-size: 28px;
-      }
-
-      .site-logo {
-        width: 170px;
-        padding: 14px;
-      }
-    }
-  </style>
+/* MOBILE */
+@media (max-width: 768px) {
+  .hero h1 { font-size: 28px; }
+  .site-logo { width: 160px; }
+}
+</style>
 </head>
 
 <body>
 
-  <div class="hero">
-    <img src="Neonox_Gas.png" alt="Neonox Gas Tech Logo" class="site-logo">
-    <h1>Neonox Gas Tech</h1>
-    <p>High-Purity Gas Pipeline Solutions with Precision Orbital Welding</p>
-  </div>
+<!-- HERO -->
+<div class="hero">
+  <img src="Neonox_Gas.png" class="site-logo" alt="Neonox Gas Tech Logo">
+  <h1>Neonox Gas Tech</h1>
+  <p>Engineering High-Purity & Industrial Gas Pipeline Systems</p>
+</div>
 
-  <nav>
-    <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#contact">Contact</a>
-  </nav>
+<nav>
+  <a href="#about">About</a>
+  <a href="#industries">Industries</a>
+  <a href="#services">Services</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <section id="about">
-    <h2>About Us</h2>
-    <p>
-      <strong>Neonox Gas Tech</strong> specializes in high-precision orbital welding,
-      high-purity stainless steel pipelines, and hazardous gas handling systems.
-    </p>
-    <p>
-      We deliver turnkey solutions including design, fabrication, installation,
-      testing, and commissioning with strict safety and international quality standards.
-    </p>
-  </section>
+<section id="about">
+<h2>About Us</h2>
+<p><strong>Neonox Gas Tech</strong> is an engineering-focused company specializing in high-precision orbital welding, stainless steel gas pipelines, and hazardous gas handling systems.</p>
+<p>We execute turnkey projects covering design, fabrication, installation, testing, and commissioning for critical industrial and high-purity gas applications.</p>
+</section>
 
-  <section id="services">
-    <h2>Our Services</h2>
-    <ul>
-      <li>Orbital Welding (1/8” to 1/2” SS Tubes)</li>
-      <li>High-Purity Stainless Steel Gas Pipelines</li>
-      <li>Industrial Gas Manifold Design & Installation</li>
-      <li>TIG Welding for Stainless Steel & Alloy Piping</li>
-      <li>Medical Gas Pipeline Systems (MGPS)</li>
-      <li>Specialty & Hazardous Gas Piping</li>
-      <li>Pressure Testing, Commissioning & AMC</li>
-    </ul>
-  </section>
+<section id="industries">
+<h2>Industries We Serve</h2>
+<ul>
+<li>Pharmaceutical & Biotech Manufacturing</li>
+<li>Semiconductor & Electronics Facilities</li>
+<li>Oil & Gas & Energy Plants</li>
+<li>Hospitals & Medical Gas Systems</li>
+<li>Chemical & Specialty Gas Industries</li>
+<li>Research & Development Laboratories</li>
+</ul>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <form action="https://formspree.io/f/xqarvayz" method="POST">
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <input type="text" name="phone" placeholder="Phone Number">
-      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+<div class="grid">
+<img src="https://images.unsplash.com/photo-1581091215367-59ab6c6a9d4a" alt="">
+<img src="https://images.unsplash.com/photo-1581090700227-1e37b190418e" alt="">
+<img src="https://images.unsplash.com/photo-1509395176047-4a66953fd231" alt="">
+</div>
+</section>
 
-    <p style="margin-top:15px;">
-      📧 neonoxgastech@gmail.com<br>
-      📞 +91-8867123061<br>
-      📍 India
-    </p>
-  </section>
+<section id="services">
+<h2>Engineering & Project Services</h2>
 
-  <a class="whatsapp" href="https://wa.me/918867123061" target="_blank">
-    WhatsApp Us
-  </a>
+<p><strong>Orbital Welding Systems</strong> – Precision welding for small diameter stainless steel tubing (1/8” to 1/2”) ensuring repeatability, cleanliness, and zero contamination.</p>
 
-  <footer>
-    © 2025 Neonox Gas Tech. All Rights Reserved.
-  </footer>
+<p><strong>High-Purity Gas Pipeline Installation</strong> – Design and execution of gas distribution systems for oxygen, nitrogen, argon, hydrogen, helium, and specialty gases.</p>
+
+<p><strong>Industrial Gas Manifold Systems</strong> – Cylinder manifolds, pressure regulation panels, safety interlocks, and changeover systems.</p>
+
+<p><strong>TIG Welding for Process Piping</strong> – Manual and automated TIG welding for stainless steel and alloy pipelines.</p>
+
+<p><strong>Testing & Commissioning</strong> – Hydro testing, pneumatic testing, leak detection, documentation, and handover.</p>
+
+<p><strong>Gases Handled:</strong> Oxygen, Nitrogen, Argon, CO₂, Hydrogen, Helium, SF₆, Carbon Monoxide, Methane, Ethylene, Hydrocarbons.</p>
+</section>
+
+<section id="contact">
+<h2>Contact Us</h2>
+<p>For quotations, technical discussions, and project support, contact us.</p>
+
+<form action="https://formspree.io/f/xqarvayz" method="POST">
+<input type="text" name="name" placeholder="Your Name" required>
+<input type="email" name="email" placeholder="Your Email" required>
+<input type="text" name="phone" placeholder="Phone Number">
+<textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+<button type="submit">Send Enquiry</button>
+</form>
+
+<p style="margin-top:15px;">
+📧 neonoxgastech@gmail.com<br>
+📞 +91-8867123061<br>
+📍 India
+</p>
+</section>
+
+<a class="whatsapp" href="https://wa.me/918867123061" target="_blank">
+WhatsApp Us
+</a>
+
+<footer>
+© 2025 Neonox Gas Tech. All Rights Reserved.
+</footer>
 
 </body>
 </html>
