--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Neonox Gas Tech | Industrial & High-Purity Gas Pipeline Systems</title>
+<title>Neonox Gas Tech | High-Purity Gas Pipeline Engineering</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -14,14 +14,14 @@
 }
 
 body {
-  background: #f2f5f9;
+  background: #f4f7fb;
   color: #222;
   line-height: 1.6;
 }
 
 /* HERO */
 .hero {
-  background: linear-gradient(135deg, #0b2e59, #144a8a);
+  background: linear-gradient(135deg, #0b2e59, #145da0);
   text-align: center;
   padding: 70px 20px 60px;
   color: #fff;
@@ -29,16 +29,17 @@ body {
 
 .site-logo {
   width: 220px;
+  max-width: 90%;
+  background: #ffffff;
   padding: 16px;
-  background: #fff;
   border-radius: 18px;
-  box-shadow: 0 20px 40px rgba(0,0,0,0.35);
-  margin-bottom: 20px;
+  box-shadow: 0 22px 45px rgba(0,0,0,0.35);
+  margin-bottom: 18px;
 }
 
 .hero h1 {
   font-size: 36px;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
 }
 
 .hero p {
@@ -60,26 +61,26 @@ nav a {
   font-weight: bold;
 }
 
-/* SECTIONS */
+/* SECTION */
 section {
-  max-width: 1150px;
-  margin: 40px auto;
-  padding: 35px;
-  background: #fff;
+  max-width: 1100px;
+  margin: 35px auto;
+  padding: 32px;
+  background: #ffffff;
   border-radius: 14px;
   box-shadow: 0 10px 25px rgba(0,0,0,0.08);
 }
 
 section h2 {
   color: #0b2e59;
-  margin-bottom: 12px;
-  border-bottom: 3px solid #144a8a;
+  margin-bottom: 14px;
+  border-bottom: 3px solid #145da0;
   display: inline-block;
   padding-bottom: 6px;
 }
 
 section p {
-  margin-bottom: 12px;
+  margin-bottom: 10px;
 }
 
 ul {
@@ -90,31 +91,19 @@ ul li {
   margin-bottom: 8px;
 }
 
-/* IMAGE GRID */
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.grid img {
-  width: 100%;
-  border-radius: 12px;
-  box-shadow: 0 6px 15px rgba(0,0,0,0.2);
-}
-
 /* CONTACT FORM */
-form input, form textarea {
+form input,
+form textarea {
   width: 100%;
   padding: 12px;
   margin-bottom: 12px;
   border-radius: 6px;
   border: 1px solid #ccc;
+  font-size: 15px;
 }
 
 form button {
-  background: #144a8a;
+  background: #145da0;
   color: #fff;
   border: none;
   padding: 12px 26px;
@@ -148,7 +137,7 @@ footer {
   color: #fff;
   text-align: center;
   padding: 20px;
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 /* MOBILE */
@@ -165,7 +154,7 @@ footer {
 <div class="hero">
   <img src="Neonox_Gas.png" class="site-logo" alt="Neonox Gas Tech Logo">
   <h1>Neonox Gas Tech</h1>
-  <p>Engineering High-Purity & Industrial Gas Pipeline Systems</p>
+  <p>High-Purity Gas Pipeline Solutions with Precision Orbital Welding</p>
 </div>
 
 <nav>
@@ -177,8 +166,8 @@ footer {
 
 <section id="about">
 <h2>About Us</h2>
-<p><strong>Neonox Gas Tech</strong> is an engineering-focused company specializing in high-precision orbital welding, stainless steel gas pipelines, and hazardous gas handling systems.</p>
-<p>We execute turnkey projects covering design, fabrication, installation, testing, and commissioning for critical industrial and high-purity gas applications.</p>
+<p><strong>Neonox Gas Tech</strong> specializes in high-precision orbital welding and stainless steel gas pipeline systems for high-purity and hazardous gas applications.</p>
+<p>We deliver turnkey engineering solutions including design, fabrication, installation, testing, and commissioning with strict focus on safety, accuracy, and long-term reliability.</p>
 </section>
 
 <section id="industries">
@@ -191,33 +180,22 @@ footer {
 <li>Chemical & Specialty Gas Industries</li>
 <li>Research & Development Laboratories</li>
 </ul>
-
-<div class="grid">
-<img src="https://images.unsplash.com/photo-1581091215367-59ab6c6a9d4a" alt="">
-<img src="https://images.unsplash.com/photo-1581090700227-1e37b190418e" alt="">
-<img src="https://images.unsplash.com/photo-1509395176047-4a66953fd231" alt="">
-</div>
 </section>
 
 <section id="services">
 <h2>Engineering & Project Services</h2>
-
-<p><strong>Orbital Welding Systems</strong> – Precision welding for small diameter stainless steel tubing (1/8” to 1/2”) ensuring repeatability, cleanliness, and zero contamination.</p>
-
-<p><strong>High-Purity Gas Pipeline Installation</strong> – Design and execution of gas distribution systems for oxygen, nitrogen, argon, hydrogen, helium, and specialty gases.</p>
-
-<p><strong>Industrial Gas Manifold Systems</strong> – Cylinder manifolds, pressure regulation panels, safety interlocks, and changeover systems.</p>
-
-<p><strong>TIG Welding for Process Piping</strong> – Manual and automated TIG welding for stainless steel and alloy pipelines.</p>
-
-<p><strong>Testing & Commissioning</strong> – Hydro testing, pneumatic testing, leak detection, documentation, and handover.</p>
+<p><strong>Orbital Welding:</strong> Precision welding for 1/8” to 1/2” stainless steel tubing ensuring clean, repeatable, leak-free joints.</p>
+<p><strong>High-Purity Gas Pipelines:</strong> Installation of stainless steel pipelines for oxygen, nitrogen, argon, hydrogen, helium, and specialty gases.</p>
+<p><strong>Industrial Gas Manifolds:</strong> Cylinder manifolds, pressure regulation panels, safety interlocks, and distribution systems.</p>
+<p><strong>TIG Welding:</strong> Manual and automated TIG welding for stainless steel and alloy piping.</p>
+<p><strong>Testing & Commissioning:</strong> Hydro testing, pneumatic testing, leak detection, documentation, and handover.</p>
 
 <p><strong>Gases Handled:</strong> Oxygen, Nitrogen, Argon, CO₂, Hydrogen, Helium, SF₆, Carbon Monoxide, Methane, Ethylene, Hydrocarbons.</p>
 </section>
 
 <section id="contact">
 <h2>Contact Us</h2>
-<p>For quotations, technical discussions, and project support, contact us.</p>
+<p>For quotations, technical discussions, and project support, please contact us.</p>
 
 <form action="https://formspree.io/f/xqarvayz" method="POST">
 <input type="text" name="name" placeholder="Your Name" required>
