Refactor index.html for styling and content updates
Updated title and improved styling for consistency. Adjusted text and layout in various sections for better readability.

--- a/index.html
+++ b/index.html
@@ -2,21 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Neonox Gas Tech | High-Purity Gas Pipeline Engineering</title>
+<title>Neonox Gas Tech</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
   background: #f4f7fb;
   color: #222;
-  line-height: 1.6;
 }
 
 /* HERO */
@@ -24,13 +18,13 @@ body {
   background: linear-gradient(135deg, #0b2e59, #145da0);
   text-align: center;
   padding: 70px 20px 60px;
-  color: #fff;
+  color: white;
 }
 
-.site-logo {
+.hero img {
   width: 220px;
   max-width: 90%;
-  background: #ffffff;
+  background: white;
   padding: 16px;
   border-radius: 18px;
   box-shadow: 0 22px 45px rgba(0,0,0,0.35);
@@ -39,23 +33,23 @@ body {
 
 .hero h1 {
   font-size: 36px;
-  margin-bottom: 8px;
+  margin: 0;
 }
 
 .hero p {
   font-size: 18px;
-  opacity: 0.95;
+  margin-top: 8px;
 }
 
 /* NAV */
 nav {
   background: #0a2545;
-  padding: 12px;
   text-align: center;
+  padding: 12px;
 }
 
 nav a {
-  color: #fff;
+  color: white;
   margin: 0 15px;
   text-decoration: none;
   font-weight: bold;
@@ -65,55 +59,44 @@ nav a {
 section {
   max-width: 1100px;
   margin: 35px auto;
-  padding: 32px;
-  background: #ffffff;
+  padding: 30px;
+  background: white;
   border-radius: 14px;
   box-shadow: 0 10px 25px rgba(0,0,0,0.08);
 }
 
 section h2 {
   color: #0b2e59;
-  margin-bottom: 14px;
   border-bottom: 3px solid #145da0;
   display: inline-block;
   padding-bottom: 6px;
-}
-
-section p {
-  margin-bottom: 10px;
 }
 
 ul {
   padding-left: 20px;
 }
 
-ul li {
+li {
   margin-bottom: 8px;
 }
 
-/* CONTACT FORM */
-form input,
-form textarea {
+/* FORM */
+input, textarea {
   width: 100%;
   padding: 12px;
   margin-bottom: 12px;
   border-radius: 6px;
   border: 1px solid #ccc;
-  font-size: 15px;
 }
 
-form button {
+button {
   background: #145da0;
-  color: #fff;
+  color: white;
   border: none;
   padding: 12px 26px;
   font-size: 16px;
   border-radius: 6px;
   cursor: pointer;
-}
-
-form button:hover {
-  background: #0b2e59;
 }
 
 /* WHATSAPP */
@@ -122,90 +105,66 @@ form button:hover {
   right: 20px;
   bottom: 20px;
   background: #25d366;
-  color: #fff;
+  color: white;
   padding: 14px 18px;
   border-radius: 50px;
   text-decoration: none;
   font-weight: bold;
-  box-shadow: 0 10px 25px rgba(0,0,0,0.3);
-  z-index: 999;
 }
 
 /* FOOTER */
 footer {
   background: #0a2545;
-  color: #fff;
+  color: white;
   text-align: center;
   padding: 20px;
-  margin-top: 40px;
-}
-
-/* MOBILE */
-@media (max-width: 768px) {
-  .hero h1 { font-size: 28px; }
-  .site-logo { width: 160px; }
 }
 </style>
 </head>
 
 <body>
 
-<!-- HERO -->
 <div class="hero">
-  <img src="Neonox_Gas.png" class="site-logo" alt="Neonox Gas Tech Logo">
+  <img src="Neonox_Gas.png" alt="Neonox Gas Tech Logo">
   <h1>Neonox Gas Tech</h1>
-  <p>High-Purity Gas Pipeline Solutions with Precision Orbital Welding</p>
+  <p>High-Purity Gas Pipeline Solutions & Precision Orbital Welding</p>
 </div>
 
 <nav>
   <a href="#about">About</a>
-  <a href="#industries">Industries</a>
   <a href="#services">Services</a>
   <a href="#contact">Contact</a>
 </nav>
 
 <section id="about">
 <h2>About Us</h2>
-<p><strong>Neonox Gas Tech</strong> specializes in high-precision orbital welding and stainless steel gas pipeline systems for high-purity and hazardous gas applications.</p>
-<p>We deliver turnkey engineering solutions including design, fabrication, installation, testing, and commissioning with strict focus on safety, accuracy, and long-term reliability.</p>
-</section>
-
-<section id="industries">
-<h2>Industries We Serve</h2>
-<ul>
-<li>Pharmaceutical & Biotech Manufacturing</li>
-<li>Semiconductor & Electronics Facilities</li>
-<li>Oil & Gas & Energy Plants</li>
-<li>Hospitals & Medical Gas Systems</li>
-<li>Chemical & Specialty Gas Industries</li>
-<li>Research & Development Laboratories</li>
-</ul>
+<p><strong>Neonox Gas Tech</strong> delivers high-precision orbital welding and gas pipeline engineering for high-purity and hazardous gas systems.</p>
+<p>We provide end-to-end solutions including design, fabrication, installation, testing, commissioning, and long-term maintenance.</p>
 </section>
 
 <section id="services">
-<h2>Engineering & Project Services</h2>
-<p><strong>Orbital Welding:</strong> Precision welding for 1/8” to 1/2” stainless steel tubing ensuring clean, repeatable, leak-free joints.</p>
-<p><strong>High-Purity Gas Pipelines:</strong> Installation of stainless steel pipelines for oxygen, nitrogen, argon, hydrogen, helium, and specialty gases.</p>
-<p><strong>Industrial Gas Manifolds:</strong> Cylinder manifolds, pressure regulation panels, safety interlocks, and distribution systems.</p>
-<p><strong>TIG Welding:</strong> Manual and automated TIG welding for stainless steel and alloy piping.</p>
-<p><strong>Testing & Commissioning:</strong> Hydro testing, pneumatic testing, leak detection, documentation, and handover.</p>
-
-<p><strong>Gases Handled:</strong> Oxygen, Nitrogen, Argon, CO₂, Hydrogen, Helium, SF₆, Carbon Monoxide, Methane, Ethylene, Hydrocarbons.</p>
+<h2>Our Services</h2>
+<ul>
+<li>Orbital Welding (1/8” to 1/2” SS Tubes)</li>
+<li>High-Purity Stainless Steel Gas Pipelines</li>
+<li>Industrial Gas Manifold Systems</li>
+<li>TIG Welding for Stainless Steel & Alloy Piping</li>
+<li>Medical Gas Pipeline Systems (MGPS)</li>
+<li>Pressure Testing & Commissioning</li>
+</ul>
 </section>
 
 <section id="contact">
 <h2>Contact Us</h2>
-<p>For quotations, technical discussions, and project support, please contact us.</p>
 
 <form action="https://formspree.io/f/xqarvayz" method="POST">
 <input type="text" name="name" placeholder="Your Name" required>
 <input type="email" name="email" placeholder="Your Email" required>
-<input type="text" name="phone" placeholder="Phone Number">
-<textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-<button type="submit">Send Enquiry</button>
+<textarea name="message" placeholder="Your Message" required></textarea>
+<button type="submit">Send Message</button>
 </form>
 
-<p style="margin-top:15px;">
+<p>
 📧 neonoxgastech@gmail.com<br>
 📞 +91-8867123061<br>
 📍 India
@@ -217,7 +176,7 @@ WhatsApp Us
 </a>
 
 <footer>
-© 2025 Neonox Gas Tech. All Rights Reserved.
+© 2025 Neonox Gas Tech
 </footer>
 
 </body>
